[package]
name = "tlp"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/base",
]

[features]
default = ["lsp-types"]

[dependencies]
# components
base = { path = "crates/base" }

# std++
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.37"
camino = "1.1.1"

# framework
salsa = { git = "https://github.com/salsa-rs/salsa/", package = "salsa-2022" }

# utilities
colored = "2.0.0"
derivative = "2.2.0"
hashbrown = "0.13.2"
itertools = "0.10.5"
rowan = "0.15.10"
rustc-hash = "1.1.0"
smallvec = "1.9.0"
la-arena = "0.3.0"
typed-index-collections = "3.1.0"

# LSP support
lsp-types = { version = "0.94.0", optional = true }

